chore: Update HTML page title.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live Diff - AI Content Comparison Tool</title>
+    <title>Live Diff | Real-time Comparison</title>
     <meta name="description" content="Real-time diff comparison tool for AI-generated content. Compare input and output with live editing support.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
